fix: horizontal scrolling issue

--- a/webapp/src/main/webapp/resources/css/main.css
+++ b/webapp/src/main/webapp/resources/css/main.css
@@ -8,6 +8,14 @@
     --color-danger: red;
 }
 
+html {
+    overflow-x: hidden;
+}
+
+body {
+    overflow-y: visible;
+}
+
 
 h1, h2, h3, h4, h5, h6, p {
     font-family: 'Noto Sans', sans-serif;
